--- a/web/client/app/app.scss
+++ b/web/client/app/app.scss
@@ -17,7 +17,8 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 
 // Component styles are injected through grunt
 // injector
-@import 'account/login/login.scss';
-@import 'admin/admin.scss';
+@import 'login/login.scss';
 @import 'main/main.scss';
+@import 'register/register.scss';
+@import 'modal/modal.scss';
 // endinjector
