register and login views

--- a/web/client/components/navbar/navbar.html
+++ b/web/client/components/navbar/navbar.html
@@ -11,6 +11,9 @@
     </div>
     <div>
       <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a href="/register">Register</a>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
             vita <span class="caret"></span>
