--- a/web/client/components/navbar/navbar.html
+++ b/web/client/components/navbar/navbar.html
@@ -11,16 +11,19 @@
     </div>
     <div>
       <ul class="nav navbar-nav navbar-right">
-        <li>
+        <li ng-show="notLoggedIn">
+          <a href="/login">Log in</a>
+        </li>
+        <li ng-show="notLoggedIn">
           <a href="/register">Register</a>
         </li>
-        <li class="dropdown">
+        <li class="dropdown" ng-show="user">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
-            vita <span class="caret"></span>
+            {{ user.username }} <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
             <li><a href="#">Account Settings</a></li>
-            <li><a href="#">Logout</a></li>
+            <li><a href="#" ng-click="logout()">Logout</a></li>
           </ul>
         </li>
       </ul>
