cleaned up some warnings

--- a/web/client/components/navbar/navbar.html
+++ b/web/client/components/navbar/navbar.html
@@ -22,7 +22,7 @@
             {{ user.username }} <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Account Settings</a></li>
+            <!-- <li><a href="#">Account Settings</a></li> -->
             <li><a href="#" ng-click="logout()">Logout</a></li>
           </ul>
         </li>
