Fixed base path issues for deployment configuration

--- a/web/client/components/navbar/navbar.html
+++ b/web/client/components/navbar/navbar.html
@@ -12,10 +12,10 @@
     <div>
       <ul class="nav navbar-nav navbar-right">
         <li ng-show="notLoggedIn">
-          <a href="/login">Log in</a>
+          <a href="login">Log in</a>
         </li>
         <li ng-show="notLoggedIn">
-          <a href="/register">Register</a>
+          <a href="register">Register</a>
         </li>
         <li class="dropdown" ng-show="user">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
